# chem-279-final-project

./: CMakeLists.txt  Dockerfile  README.md  download  rubric.md  run.sh
examples/: h2.xyz  h2o.xyz  hcl.xyz
include/: cndo_engine.h  dipole.h  finite_difference.h  hessian.h  molecule.h  validation.h  vibration.h  vibrational_frequency.h
input/: acetaldehyde.xyz  formaldehyde.xyz  h2.xyz  h2o.xyz  hcl.xyz  methanol.xyz  nh3.xyz
scripts/: psi4_reference.py
src/: cndo_energy.cpp  cndo_engine.cpp  dipole.cpp  finite_difference.cpp  hessian.cpp  main.cpp  molecule.cpp  validation.cpp  vibration.cpp  vibrational_frequency.cpp
visualization/: dipole_vis.py  freq_vis.py  h2_visualize.py  h2o_visualize.py  hcl_visualize.py  nh3_visualize.py  run_vis.py  visualize.ipynb  visualize.py
visualization/dipoles/: acetaldehyde_dipole.json  formaldehyde_dipole.json  h2_dipole.json  h2o_dipole.json  hcl_dipole.json  methanol_dipole.json  nh3_dipole.json
visualization/modes/: h2_modes.json  h2o_modes.json  hcl_modes.json
visualization/notebooks/: dipole_vis.ipynb  freq_vis.ipynb
visualization/output/dipole/: acetaldehyde_dipole.html  formaldehyde_dipole.html  h2_dipole.html  h2o_dipole.html  hcl_dipole.html  methanol_dipole.html  nh3_dipole.html
visualization/output/modes/: h2_modes.html  h2o_modes.html  hcl_modes.html
